<resources>
    <string name="app_name">World Planner</string>
    <string name="hello_blank_fragment">Hellow World!</string>

    <!--Toolbar Titles-->
    <string name="toolbar_current_world">Current World</string>

    <string name="toolbar_change_world">Change World</string>

    <string name="toolbar_list_characters">Characters</string>
    <string name="toolbar_list_locations">Locations</string>
    <string name="toolbar_list_items">Items</string>
    <string name="toolbar_list_groups">Groups</string>

    <string name="toolbar_detail">%1$s Details</string>

    <!--Menus-->
    <string name="menu_edit">Edit</string>
    <string name="menu_change_world">Change World</string>
    <string name="menu_save">Save</string>
    <string name="menu_delete">Delete</string>

    <string name="menu_bottom_world_details">World Details</string>
    <string name="menu_bottom_world_details_condensed">World</string>
    <string name="menu_bottom_world_events">Plot Events</string>
    <string name="menu_bottom_world_events_condensed">Events</string>
    <string name="menu_bottom_world_elements">World Elements</string>
    <string name="menu_bottom_world_elements_condensed">Elements</string>

    <string name="menu_bottom_character_basic">Basic Details</string>
    <string name="menu_bottom_character_basic_condensed">Basic</string>
    <string name="menu_bottom_character_physical">Physical Traits</string>
    <string name="menu_bottom_character_physical_condensed">Physical</string>
    <string name="menu_bottom_character_mental">Psychological Traits</string>
    <string name="menu_bottom_character_mental_condensed">Mental</string>

    <!--Dialogs-->
    <string name="dialog_effect_name_prompt">Effect name:</string>
    <string name="dialog_effect_name_hint">Commanding Might</string>
    <string name="dialog_effect_description_prompt">Effect description:</string>
    <string name="dialog_effect_description_hint">The power to command all!</string>

    <string name="dialog_event_type_name_prompt">Type Name:</string>
    <string name="dialog_event_type_name_hint">Worldwide</string>
    <string name="dialog_event_type_description_prompt">Type Description:</string>
    <string name="dialog_event_type_description_hint">Something so large that everyone knows about it.</string>
    <string name="dialog_event_type_color_prompt">Events will have this color:</string>
    <string name="dialog_event_type_change">Change</string>

    <!--Detail Fragments-->
    <string name="fragment_detail_name_prompt">Name:</string>
    <string name="fragment_detail_description_prompt">Description:</string>

    <!--Event Detail-->
    <string name="fragment_detail_event_name_hint">Formation of the Fellowship</string>
    <string name="fragment_detail_event_location_prompt">Occurred at:</string>
    <string name="fragment_detail_event_location_hint">Where this event occurred</string>
    <string name="fragment_detail_event_type_prompt">Type:</string>
    <string name="fragment_detail_event_description_hint">Nine brave souls pledge to complete a seemingly impossible task together. Their success rides upon unity and trust.</string>

    <!--Group Detail-->
    <string name="fragment_detail_group_name_hint">The Cult of Giant Dancers</string>
    <string name="fragment_detail_group_size_prompt">Size:</string>
    <string name="fragment_detail_group_size_hint">25</string>
    <string name="fragment_detail_group_description_hint">A small group of giants who love dancing. They meet once a week in secrecy.</string>
    <string name="fragment_detail_group_character_prompt">Characters in group:</string>

    <!--Item Detail-->
    <string name="fragment_detail_item_name_hint">Web Canister</string>
    <string name="fragment_detail_item_description_hint">Peter Parker\'s source of webbing and can be easily swapped. It is his own creation and holds any variant he can think of.</string>
    <string name="fragment_detail_item_effects_prompt">Item Effects</string>

    <!--Location Detail-->
    <string name="fragment_detail_location_name_hint">Eighth Ring Bar</string>
    <string name="fragment_detail_location_description_hint">A small but warm bar. The main patrons seem to be scheming about the pinball machine.</string>
    <string name="fragment_detail_location_event_prompt">Events that occurred here:</string>

    <!--World Detail-->
    <string name="fragment_detail_world_name_hint">Untitled world</string>
    <string name="fragment_detail_world_description_hint">Add a description to your world to get started.</string>
    <string name="fragment_detail_world_events_prompt">Major Events</string>

    <!--World Events-->
    <string name="fragment_world_event_type_prompt">Types of Events</string>

    <!--Character Detail-->
    <string name="fragment_detail_character_name_hint">Eva</string>
    <string name="fragment_detail_character_nickname_prompt">Nickname:</string>
    <string name="fragment_detail_character_nickname_hint">Big Momma</string>
    <string name="fragment_detail_character_gender_prompt">Gender:</string>
    <string name="fragment_detail_character_gender_hint">Female</string>
    <string name="fragment_detail_character_age_prompt">Age:</string>
    <string name="fragment_detail_character_age_hint">78</string>
    <string name="fragment_detail_character_height_prompt">Height:</string>
    <string name="fragment_detail_character_height_hint">80</string>
    <string name="fragment_detail_character_height_scale">inches</string>
    <string name="fragment_detail_character_weight_prompt">Weight:</string>
    <string name="fragment_detail_character_weight_hint">120</string>
    <string name="fragment_detail_character_weight_scale">pounds</string>
    <string name="fragment_detail_character_description_hint">A brave woman who worked as a Chinese spy. Her past is a mystery. After an eventful encounter with a pair of soldiers from America, she dedicated her life to helping the man she loved.</string>

    <!--Character Traits-->
    <string name="fragment_character_left_side">Left Side</string>
    <string name="fragment_character_right_side">Right Side</string>

    <!--Character Head-->
    <string name="fragment_character_head_hair_prompt">Hair Notes:</string>
    <string name="fragment_character_head_hair_hint">A standard bob cut with no bangs. Her hair is a light brown.</string>
    <string name="fragment_character_head_eye_prompt">Eye Notes:</string>
    <string name="fragment_character_head_eye_hint">Both pupils are dark brown. The left eye brow is burnt off.</string>
    <string name="fragment_character_head_ear_prompt">Ear Notes:</string>
    <string name="fragment_character_head_ear_hint">Standard human ears, they are rounded and attached at he bottom.</string>
    <string name="fragment_character_head_nose_prompt">Nose Notes:</string>
    <string name="fragment_character_head_nose_hint">A small button nose. She has a keen sense of smell.</string>
    <string name="fragment_character_head_mouth_prompt">Mouth Notes:</string>
    <string name="fragment_character_head_mouth_hint">Full lips in a nice shade of dim red. Almost always in a smile.</string>
    <string name="fragment_character_head_neck_prompt">Neck Notes:</string>
    <string name="fragment_character_head_neck_hint">Just a normal neck. A bit on the short side.</string>

    <!--Character Torso-->
    <string name="fragment_character_torso_shoulder_prompt">Shoulder Notes:</string>
    <string name="fragment_character_torso_shoulder_hint">Slim and often hunched.</string>
    <string name="fragment_character_torso_chest_prompt">Chest Notes:</string>
    <string name="fragment_character_torso_chest_hint">Average sized for a girl her age. There is a birth mark on her collarbone.</string>
    <string name="fragment_character_torso_stomach_prompt">Stomach Notes:</string>
    <string name="fragment_character_torso_stomach_hint">Relatively flat, it can grow three sizes after a satisfying meal.</string>
    <string name="fragment_character_torso_back_prompt">Back Notes:</string>
    <string name="fragment_character_torso_back_hint">A small scar covers her lower back. It appears to be an old cut.</string>

    <!--Character Arm-->
    <string name="fragment_character_arm_upper_prompt">Upper Arm Notes:</string>
    <string name="fragment_character_arm_upper_hint">Well defined from years of labor on her family\'s small farm.</string>
    <string name="fragment_character_arm_lower_prompt">Lower Arm Notes:</string>
    <string name="fragment_character_arm_lower_hint">Very wide but not intimidating at all.</string>
    <string name="fragment_character_hand_prompt">Hand Notes:</string>
    <string name="fragment_character_hand_hint">Her palm has a few callouses from labor. They know the meaning of work.</string>

    <!--Character Leg-->
    <string name="fragment_character_leg_upper_prompt">Upper Leg Notes:</string>
    <string name="fragment_character_leg_upper_hint">Pretty slim for someone who is always running around. Birthmark on inner thigh.</string>
    <string name="fragment_character_leg_lower_prompt">Lower Leg Notes:</string>
    <string name="fragment_character_leg_lower_hint">Strong calves give her great speed which she loves to show off.</string>
    <string name="fragment_character_foot_prompt">Foot Notes:</string>
    <string name="fragment_character_foot_hint">Pretty large for a young girl. They are often dirty and without shoes.</string>

    <!--Add hints to list items-->
</resources>
