<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_edit"
        android:icon="@android:drawable/ic_menu_edit"
        android:name="Edit"
        android:title="@string/menu_edit"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_world_change"
        android:icon="@drawable/world_switch"
        android:title="@string/menu_change_world"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:name="Save"
        android:title="@string/menu_save"
        app:showAsAction="ifRoom"
        />

    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:name="Delete"
        android:title="@string/menu_delete"
        app:showAsAction="ifRoom"
        />
</menu>