<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.lchrislee.worldplanner.fragments.detail.GroupDetailFragment"
    >

    <ImageView
        android:id="@+id/fragment_detail_image"
        android:background="@color/colorImageBackground"
        android:scaleType="centerCrop"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_detail_image"
        android:layout_marginBottom="4dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        >

        <TextView
            android:text="@string/fragment_detail_name_prompt"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            />

        <EditText
            android:id="@+id/fragment_detail_name"
            android:hint="@string/fragment_detail_group_name_hint"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/fragment_detail_group_size_prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="4dp"
            android:layout_marginEnd="4dp"
            />

        <EditText
            android:id="@+id/fragment_detail_group_size"
            android:hint="@string/fragment_detail_group_size_hint"
            android:inputType="number"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            />

    </LinearLayout>

    <TextView
        android:text="@string/fragment_detail_description_prompt"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        />

    <EditText
        android:id="@+id/fragment_detail_description"
        android:hint="@string/fragment_detail_group_description_hint"
        android:inputType="textMultiLine"
        android:gravity="top"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:maxLines="3"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        />

</LinearLayout>